; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-mips.c_mips_elf_final_gp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-mips.c_mips_elf_final_gp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }

@bfd_reloc_undefined = common dso_local global i32 0, align 4
@BSF_SECTION_SYM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"GP relative relocation when _gp not defined\00", align 1
@bfd_reloc_dangerous = common dso_local global i32 0, align 4
@bfd_reloc_ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*, i64, i8**, i64*)* @mips_elf_final_gp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mips_elf_final_gp(i32* %0, %struct.TYPE_6__* %1, i64 %2, i8** %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i64*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8** %3, i8*** %10, align 8
  store i64* %4, i64** %11, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %15 = call i64 @bfd_is_und_section(%struct.TYPE_7__* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %5
  %18 = load i64, i64* %9, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i64*, i64** %11, align 8
  store i64 0, i64* %21, align 8
  %22 = load i32, i32* @bfd_reloc_undefined, align 4
  store i32 %22, i32* %6, align 4
  br label %71

23:                                               ; preds = %17, %5
  %24 = load i32*, i32** %7, align 8
  %25 = call i64 @_bfd_get_gp_value(i32* %24)
  %26 = load i64*, i64** %11, align 8
  store i64 %25, i64* %26, align 8
  %27 = load i64*, i64** %11, align 8
  %28 = load i64, i64* %27, align 8
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %30, label %69

30:                                               ; preds = %23
  %31 = load i64, i64* %9, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %40

33:                                               ; preds = %30
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* @BSF_SECTION_SYM, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %69

40:                                               ; preds = %33, %30
  %41 = load i64, i64* %9, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %57

43:                                               ; preds = %40
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 1
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = add nsw i64 %50, 16384
  %52 = load i64*, i64** %11, align 8
  store i64 %51, i64* %52, align 8
  %53 = load i32*, i32** %7, align 8
  %54 = load i64*, i64** %11, align 8
  %55 = load i64, i64* %54, align 8
  %56 = call i32 @_bfd_set_gp_value(i32* %53, i64 %55)
  br label %68

57:                                               ; preds = %40
  %58 = load i32*, i32** %7, align 8
  %59 = load i64*, i64** %11, align 8
  %60 = call i32 @mips_elf_assign_gp(i32* %58, i64* %59)
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %67, label %62

62:                                               ; preds = %57
  %63 = call i64 @_(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %64 = inttoptr i64 %63 to i8*
  %65 = load i8**, i8*** %10, align 8
  store i8* %64, i8** %65, align 8
  %66 = load i32, i32* @bfd_reloc_dangerous, align 4
  store i32 %66, i32* %6, align 4
  br label %71

67:                                               ; preds = %57
  br label %68

68:                                               ; preds = %67, %43
  br label %69

69:                                               ; preds = %68, %33, %23
  %70 = load i32, i32* @bfd_reloc_ok, align 4
  store i32 %70, i32* %6, align 4
  br label %71

71:                                               ; preds = %69, %62, %20
  %72 = load i32, i32* %6, align 4
  ret i32 %72
}

declare dso_local i64 @bfd_is_und_section(%struct.TYPE_7__*) #1

declare dso_local i64 @_bfd_get_gp_value(i32*) #1

declare dso_local i32 @_bfd_set_gp_value(i32*, i64) #1

declare dso_local i32 @mips_elf_assign_gp(i32*, i64*) #1

declare dso_local i64 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
